# mediasort

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  mediasort.py  pyproject.toml
deprecated/: media_sort.py  move_media.py
